CustomObjects/objects/blng__Invoice__c.object
<CustomObject>
    <description>Storing the Invoices.</description>
    <fields>
        <fullName>blng__ARStatus__c</fullName>
        <label>AR Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceARStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>AccountInvoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Balance__c</fullName>
        <formula>blng__TotalAmount__c - blng__Payments__c - blng__Credits__c + blng__Debits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (BillToContact)</relationshipLabel>
        <relationshipName>BillToContactInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Credits__c</fullName>
        <label>Credits</label>
        <summarizedField>blng__InvoiceLine__c.blng__Credits__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DebitPayments__c</fullName>
        <label>Debit Payments</label>
        <summarizedField>blng__InvoiceLine__c.blng__DebitPayments__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Debits__c</fullName>
        <label>Debits</label>
        <summarizedField>blng__InvoiceLine__c.blng__Debits__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__DueDate__c</fullName>
        <description>When is the last date of invoice to be paid.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up relationship to the Invoice Run.Invoice is child of  Invoice Run.
This field tells from which Invoice Run the Invoice is generated.</description>
        <label>Invoice Run (Created By)</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>InvoiceRunInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>OrderInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBatch__c</fullName>
        <label>Payment Batch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PaymentStatus__c</fullName>
        <formula>IF(
AND(blng__Balance__c &gt; 0, blng__Payments__c &gt; 0),
&apos;Partially Paid&apos;, IF(blng__Balance__c &gt; 0, &apos;Unpaid&apos;, &apos;Paid&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoiceLines__c</fullName>
        <label>Allocations Against Invoice Lines</label>
        <summarizedField>blng__InvoiceLine__c.blng__PaymentsAgainstInvoiceLines__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__PaymentsAgainstInvoice__c</fullName>
        <label>Allocations Against Invoice</label>
        <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Payments__c</fullName>
        <formula>blng__PaymentsAgainstInvoice__c +  blng__PaymentsAgainstInvoiceLines__c - blng__RefundsAgainstInvoice__c - blng__RefundsAgainstInvoiceLines__c + blng__DebitPayments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoiceLines__c</fullName>
        <label>Unallocations Against Invoice Lines</label>
        <summarizedField>blng__InvoiceLine__c.blng__RefundsAgainstInvoiceLines__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RefundsAgainstInvoice__c</fullName>
        <label>Unallocations Against Invoice</label>
        <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
            <operation>equals</operation>
            <value>Unallocation</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__ShippingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is loop up to contact for Shipping Contact</description>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices (Shipping Contact)</relationshipLabel>
        <relationshipName>ShippingContactInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__StatusFlag__c</fullName>
        <description>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</description>
        <formula>IF(ISPICKVAL(blng__Status__c, &apos;Cancelled&apos;),IMAGE(&quot;/resource/blng__StatusFlagWhite&quot;, &quot;White&quot;),
IF((blng__Balance__c = 0), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
     IF(TODAY() &gt;  blng__DueDate__c &amp;&amp; (blng__Balance__c &gt; 0),                                               
			Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
			Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
		)
))</formula>
        <inlineHelpText>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</inlineHelpText>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>blng__InvoiceLine__c.blng__Subtotal__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <label>Target  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TaxAmount__c</fullName>
        <label>Tax</label>
        <summarizedField>blng__InvoiceLine__c.blng__TaxAmount__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__TaxErrorMessage__c</fullName>
        <label>Tax Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TotalAmount__c</fullName>
        <label>Total Amount (With Tax)</label>
        <summarizedField>blng__InvoiceLine__c.blng__TotalAmount__c</summarizedField>
        <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__InvoiceDate__c</columns>
        <columns>blng__DueDate__c</columns>
        <columns>blng__StatusFlag__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
    </listViews>
    <listViews>
        <fullName>blng__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>blng__Cancelled_Invoices</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__InvoiceDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>Cancelled Invoices</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>blng__Unpaid_Invoice_List</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__DueDate__c</columns>
        <columns>blng__PaymentStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unpaid Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>